TBW-4 Fixed layout issues with linebreak and translations

--- a/src/Pages/ServicesPage/ServicesPage.scss
+++ b/src/Pages/ServicesPage/ServicesPage.scss
@@ -20,6 +20,7 @@
     }
   }
   .linebreak {
+    box-sizing: border-box;
     position: absolute;
     left: 0;
     width: 100%;
